name:                hwk
version:             0.1.0
synopsis:            A modern Haskell based AWK replacement
description:         A simple Haskell-based replacement for awk/sed.
homepage:            https://github.com/lukasmartinelli/hwk
license:             MIT
license-file:        LICENSE
author:              Lukas Martinelli
maintainer:          Jens Petersen <juhpetersen@gmail.com>
copyright:           2016-2017 Lukas Martinelli
category:            Development
homepage:            https://github.com/juhp/hwk
build-type:          Simple
extra-doc-files:     README.md
                     ChangeLog.md
cabal-version:       1.18

source-repository head
  type:                git
  location:            https://github.com/juhp/hwk.git

executable hwk
  main-is:             Main.hs
  build-depends:       base <5,
                       unix >= 2.7
  default-language:    Haskell2010
  ghc-options:         -Wall
  if impl(ghc >= 8.0)
    ghc-options:       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
